// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnalysesToolbar /> should render with [canModify=false] 1`] = `
<div
  className="toolbar"
>
  <FormGroup
    bsClass="form-group"
  >
    <InputGroup
      bsClass="input-group"
    >
      <InputGroupAddon
        bsClass="input-group-addon"
      >
        <Icon
          faStyle="fas"
          fixedWidth={false}
          name="search"
          pullRight={false}
        />
      </InputGroupAddon>
      <FormControl
        bsClass="form-control"
        componentClass="input"
        onChange={[Function]}
        placeholder="User or reference"
        type="text"
        value="baz"
      />
    </InputGroup>
  </FormGroup>
  <Button
    bsStyle="primary"
    disabled={true}
    icon="plus-square fa-fw"
    onClick={[Function]}
    pullRight={false}
    tip="New Analysis"
    tipPlacement="top"
  />
</div>
`;

exports[`<AnalysesToolbar /> should render with default props 1`] = `
<div
  className="toolbar"
>
  <FormGroup
    bsClass="form-group"
  >
    <InputGroup
      bsClass="input-group"
    >
      <InputGroupAddon
        bsClass="input-group-addon"
      >
        <Icon
          faStyle="fas"
          fixedWidth={false}
          name="search"
          pullRight={false}
        />
      </InputGroupAddon>
      <FormControl
        bsClass="form-control"
        componentClass="input"
        onChange={[Function]}
        placeholder="User or reference"
        type="text"
        value="baz"
      />
    </InputGroup>
  </FormGroup>
  <Button
    bsStyle="primary"
    disabled={false}
    icon="plus-square fa-fw"
    onClick={[Function]}
    pullRight={false}
    tip="New Analysis"
    tipPlacement="top"
  />
</div>
`;
